version/0.16/_sources/api/solver/_autosummary/settings/report_plots.rst.txt
:orphan:

.. _report_plots:

report_plots
============

.. autoclass:: ansys.fluent.core.solver.settings_232.report_plots.report_plots
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`report_plots_child <report_plots_child>`


.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`monitor <monitor>`       'monitor' child.

========================   ====================

