version/0.20/_sources/api/solver/_autosummary/settings/report_plots.rst.txt
:orphan:

.. _report_plots:

report_plots
============

.. autoclass:: ansys.fluent.core.solver.settings_241.report_plots.report_plots
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`report_plots_child <report_plots_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`monitor <monitor_1>`       'monitor' child.

==========================   ====================

